--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
 bilde: https://github.com/uit-econ/hovedside/blob/main/assets/img/Sok-1004.jpg?raw=true #Emnebilde
-name: Sok-1004 Økonomiske emner med programmering #Emnetittel
-semester: Høst 2021
-webadresse: https://uit-sok-1004-h21.github.io/
+name: Sok-2030 Næringsøkonomi og konkurransestrategi #Emnetittel
+semester: Vår 2020
+webadresse: https://uit-sok-2030-v22.github.io/
 
 
 #--------------Avanserte instillinger---------------------------------------------------------------------
